--- a/index.html
+++ b/index.html
@@ -4,59 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <img src="#" alt="">
+    <header class="header">
+        <img src="images/logo.png" alt="">
+        <input type="text">
         <nav>
-            <ul>
+            <ul class="header__nav" id="menu">
                 <li>
-                    <a href="#">Catalog</a>
+                    <a href="#" class="header__link">Catalog</a>
                 </li>
                 <li>
-                    <a href="#">Servises</a>
+                    <a href="#" class="header__link">Servises</a>
                 </li>
                 <li>
-                    <a href="#">Blog</a>
+                    <a href="#" class="header__link">Blog</a>
                 </li>
                 <li>
-                    <a href="#">About us</a>
+                    <a href="#" class="header__link">About us</a>
+                    <img src="images/logo.png" alt="">
                 </li>
             </ul>
         </nav>
-        <a href="tel:7194319698">719-431-9698</a>
+        <a href="tel:7194319698" class="header__phone">719-431-9698</a>
         <a href="#" class="button">Contact  Us</a>
     </header>
     <main>
         <section class="banner">
-            <h1>The world’s leading cleaning company</h1>
-            <button>Get a Free Estimate</button>
+            <h1 class="baner__title">The world’s leading cleaning company</h1>
+            <button class="button button_secondary">Get a Free Estimate</button>
         </section>
-        <section>
-            <h2>OUR MOST POPULAR SERVICES</h2>
-            <ul>
-                <li>
+        <section class="services">
+            <h2 class="services__title">OUR MOST POPULAR SERVICES</h2>
+            <ul class="services__list">
+                <li class="services__item">
                     <a href="#">
-                        <img src="#" alt="">
-                        <h3>Carpet Cleaning</h3>
+                        <img src="images/service1.jpg" alt="">
+                        <h3 class="services__heading">Carpet Cleaning</h3>
                     </a>
                     <p>When you choose Chem-Dry, you get deeper clean, faster-drying carpet and healthier home for you.</p>
                     <a href="#" class="button">Learn More</a>
                 </li>
                 <li>
-                    <img src="#" alt="">
+                    <img src="images/service2.jpg" alt="">
                     <h3>Carpet Cleaning</h3>
                     <p>When you choose Chem-Dry, you get deeper clean, faster-drying carpet and healthier home for you.</p>
                     <a href="#" class="button">Learn More</a>
                 </li>
                 <li>
-                    <img src="#" alt="">
+                    <img src="images/service3.jpg" alt="">
                     <h3>Carpet Cleaning</h3>
                     <p>When you choose Chem-Dry, you get deeper clean, faster-drying carpet and healthier home for you.</p>
                     <a href="#" class="button">Learn More</a>
                 </li>
                 <li>
-                    <img src="#" alt="">
+                    <img src="images/service4.jpg" alt="">
                     <h3>Carpet Cleaning</h3>
                     <p>When you choose Chem-Dry, you get deeper clean, faster-drying carpet and healthier home for you.</p>
                     <a href="#" class="button">Learn More</a>
@@ -64,8 +67,8 @@
             </ul>
         </section>
         <section class="about">
-            <div>
-                <h2>Why Haley’s Chem-Dry?</h2>
+            <div class="about__wrapper">
+                <h2 class="about__title">Why Haley’s Chem-Dry?</h2>
                 <p>Chem-Dry’s mission is helping people live healthy lives, which starts with clean carpets and a healthy home. Our proprietary hot carbonating extraction cleaning process penetrates deep into the fibers, removing an average of 98% of common household allergens from carpets, upholstery and rugs and 89% of the airborne bacteria in your home when a sanitizer is added.* Plus, our green-certified solution, The Natural®, contains no soaps or detergents so it’s safe and non-toxic for your family and pets.</p>
                 <a href="#" class="button">Learn More</a>
             </div>
@@ -73,27 +76,27 @@
         </section>
         <section class="awards">
             <h2 class="hidden">Awards</h2>
-            <ul>
+            <ul class="awards__list">
                 <li>
-                    <img src="#" alt="">
+                    <img src="images/brands/brand1.png" alt="">
                 </li>
                 <li>
-                    <img src="#" alt="">
+                    <img src="images/brands/brand1.png" alt="">
                 </li>
                 <li>
-                    <img src="#" alt="">
+                    <img src="images/brands/brand1.png" alt="">
                 </li>
                 <li>
-                    <img src="#" alt="">
+                    <img src="images/brands/brand1.png" alt="">
                 </li>
                 <li>
-                    <img src="#" alt="">
+                    <img src="images/brands/brand1.png" alt="">
                 </li>
                 <li>
-                    <img src="#" alt="">
+                    <img src="images/brands/brand1.png" alt="">
                 </li>
                 <li>
-                    <img src="#" alt="">
+                    <img src="images/brands/brand1.png" alt="">
                 </li>
             </ul>
         </section>
@@ -103,10 +106,10 @@
         <p>9420 Cedar CT, Thornton, CO 80229</p>
         <a href="tel:7206059399">(720) 605-9399</a>
     </article>
-    <footer>
-        <p>Subscribe to our social networks</p>
-        <ul>
-            <li>
+    <footer class="footer">
+        <p class="footer__text">Subscribe to our social networks</p>
+        <ul class="social">
+            <li class="social_item">
                 <a href="#">
                     <img src="#" alt="">
                 </a>
