--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
 
                 <textarea name="" id="" cols="10" rows="5">Message</textarea>
 
-                <button type="submit">
+                <button type="submit" class="button">
                     Submit
                 </button>
             </form>
