--- a/index.html
+++ b/index.html
@@ -95,25 +95,25 @@
             <h2 class="hidden">Awards</h2>
             <ul class="awards__list undotted">
                 <li>
-                    <img src="images/brands/brand1.png" alt="">
+                    <img src="images/brands/brand1.png" alt="brand1">
                 </li>
                 <li>
-                    <img src="images/brands/brand1.png" alt="">
+                    <img src="images/brands/brand1.png" alt="brand2">
                 </li>
                 <li>
-                    <img src="images/brands/brand1.png" alt="">
+                    <img src="images/brands/brand1.png" alt="brand3">
                 </li>
                 <li>
-                    <img src="images/brands/brand1.png" alt="">
+                    <img src="images/brands/brand1.png" alt="brand4">
                 </li>
                 <li>
-                    <img src="images/brands/brand1.png" alt="">
+                    <img src="images/brands/brand1.png" alt="brand5">
                 </li>
                 <li>
-                    <img src="images/brands/brand1.png" alt="">
+                    <img src="images/brands/brand1.png" alt="brand6">
                 </li>
                 <li>
-                    <img src="images/brands/brand1.png" alt="">
+                    <img src="images/brands/brand1.png" alt="brand7">
                 </li>
             </ul>
         </section>
@@ -136,26 +136,26 @@
             <p class="footer__text">Subscribe to our social networks</p>
             <ul class="social undotted">
                 <li class="social_item">
-                    <a href="#">
+                    <a href="#" aria-label="facebook">
                         <img src="images/Vector.svg" alt="">
                     </a>
                 </li>
                 <li class="social_item">
-                    <a href="#">
+                    <a href="#" aria-label="facebook">
                         <svg width="60" height="58" viewBox="0 0 60 58" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M27.7031 33.2533V23.9733L36.7149 28.6133L27.7031 33.2533ZM47.4899 22.4267C47.4899 22.4267 47.0981 20.1067 46.1186 19.14C44.9431 17.7867 43.3759 17.7867 42.7881 17.7867C38.0863 17.4 31.2295 17.4 31.2295 17.4C31.2295 17.4 24.1768 17.4 19.6709 17.7867C19.0831 17.7867 17.5159 17.7867 16.3404 19.14C15.3609 20.1067 14.969 22.4267 14.969 22.4267C14.969 22.4267 14.5772 25.1333 14.5772 27.6467V30.16C14.5772 32.8667 14.969 35.5733 14.969 35.5733C14.969 35.5733 15.3609 37.8933 16.3404 38.86C17.5159 40.2133 19.279 40.2133 20.0627 40.2133C22.8054 40.4067 31.4254 40.6 31.4254 40.6C31.4254 40.6 38.4781 40.6 42.984 40.2133C43.5718 40.2133 45.139 40.2133 46.3145 38.86C47.294 37.8933 47.6859 35.5733 47.6859 35.5733C47.6859 35.5733 48.0777 32.8667 48.0777 30.16V27.6467C47.6859 25.1333 47.4899 22.4267 47.4899 22.4267ZM0.863586 29C0.863586 12.9533 13.9895 0 30.2499 0C46.5104 0 59.6363 12.9533 59.6363 29C59.6363 45.0467 46.5104 58 30.2499 58C13.9895 58 0.863586 45.0467 0.863586 29Z" fill="white"/>
                         </svg>                        
                     </a>
                 </li>
                 <li class="social_item">
-                    <a href="vk.com">
+                    <a href="vk.com" aria-label="facebook">
                         <svg width="60" height="58" viewBox="0 0 60 58" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M37.2118 20.1067V15.2733H32.7059C28.9836 15.2733 26.4368 18.3667 26.4368 22.2333V24.94H21.735V29.3867H26.4368V42.92H31.7263V29.3867H37.2118V24.94H31.7263V21.8467C31.7263 20.88 32.3141 20.3 32.9018 20.3H37.2118V20.1067ZM30.1591 0C46.4195 0 59.5454 12.9533 59.5454 29C59.5454 45.0467 46.4195 58 30.1591 58C13.8986 58 0.772705 45.0467 0.772705 29C0.772705 12.9533 13.8986 0 30.1591 0Z" fill="white"/>
                         </svg>                            
                     </a>
                 </li>
-                <li class="social_item">
-                    <a href="#">
+                <li class="social_item" >
+                    <a href="#" aria-label="facebook">
                         <svg width="60" height="58" viewBox="0 0 60 58" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M37.2118 20.1067V15.2733H32.7059C28.9836 15.2733 26.4368 18.3667 26.4368 22.2333V24.94H21.735V29.3867H26.4368V42.92H31.7263V29.3867H37.2118V24.94H31.7263V21.8467C31.7263 20.88 32.3141 20.3 32.9018 20.3H37.2118V20.1067ZM30.1591 0C46.4195 0 59.5454 12.9533 59.5454 29C59.5454 45.0467 46.4195 58 30.1591 58C13.8986 58 0.772705 45.0467 0.772705 29C0.772705 12.9533 13.8986 0 30.1591 0Z" fill="white"/>
                             </svg>
@@ -163,7 +163,7 @@
                     </a>
                 </li>
                 <li class="social_item">
-                    <a href="#">
+                    <a href="#" aria-label="facebook">
                         <svg width="60" height="58" viewBox="0 0 60 58" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M37.2118 20.1067V15.2733H32.7059C28.9836 15.2733 26.4368 18.3667 26.4368 22.2333V24.94H21.735V29.3867H26.4368V42.92H31.7263V29.3867H37.2118V24.94H31.7263V21.8467C31.7263 20.88 32.3141 20.3 32.9018 20.3H37.2118V20.1067ZM30.1591 0C46.4195 0 59.5454 12.9533 59.5454 29C59.5454 45.0467 46.4195 58 30.1591 58C13.8986 58 0.772705 45.0467 0.772705 29C0.772705 12.9533 13.8986 0 30.1591 0Z" fill="white"/>
                             </svg>
